--- a/vignettes/gmvarkit-vignette.tex
+++ b/vignettes/gmvarkit-vignette.tex
@@ -494,7 +494,8 @@ R> print_std_errors(fit12gs)
 \end{Sinput}
 \begin{Soutput}
 Reduced form model:
-p = 1, M = 2, conditional log-likelihood, intercept parametrization, no AR parameter constraints 
+p = 1, M = 2, conditional log-likelihood, intercept parametrization,
+ no AR parameter constraints 
 
 APPROXIMATE STANDARD ERRORS
 
